WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
115468
fourthTier: Structure::addPropertyTransitionToExistingStructure should be thread-safe
https://bugs.webkit.org/show_bug.cgi?id=115468
Summary
fourthTier: Structure::addPropertyTransitionToExistingStructure should be thr...
Filip Pizlo
Reported
2013-05-01 00:00:21 PDT
Patch forthcoming. This is blocking
https://bugs.webkit.org/show_bug.cgi?id=115300
because the StringImpl assertions show this being called from the compilation thread.
Attachments
the patch
(6.59 KB, patch)
2013-05-01 14:50 PDT
,
Filip Pizlo
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2013-05-01 14:50:33 PDT
Created
attachment 200242
[details]
the patch
Geoffrey Garen
Comment 2
2013-05-01 14:56:36 PDT
Comment on
attachment 200242
[details]
the patch View in context:
https://bugs.webkit.org/attachment.cgi?id=200242&action=review
> Source/JavaScriptCore/bytecode/PutByIdStatus.cpp:204 > + Structure* transition = Structure::addPropertyTransitionToExistingStructureConcurrently(structure, ident, 0, 0, offset);
This function could use a better name that doesn't imply that it performs an add.
Filip Pizlo
Comment 3
2013-05-01 16:00:55 PDT
Landed in
http://trac.webkit.org/changeset/149459
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug